# octetos-coreutils

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  TODO  builder.iss  configure.ac  mingw64.cbp
ing/: rqs.ods
src/: Apishell.cc  Apishell.hh  Makefile.am  Makefile.in  cd.cc  config-cb.h  develop.cc  exists.cc  ls.cc  mkdir.cc  octetos-coreutils.pc.in  rename.cc  rm.cc  rmdir.cc  shell.cc  shell.hh  touch.cc  uname.cc  uname.hh
tests/: Makefile.am  v0.cc
